--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,13 +1,21 @@
 body {
     font-family: "Roboto", "sans-serif";
     color:black;
-    background-color: #9aebbd;
+    background-color: #ccdfd4;
+}
+h1, h2, h3, h4, h5, h6, p, ul, li {
+    padding: 0;
+    margin: 0;
+}
+ul, li {
+    text-decoration: none;
+    list-style: none;
 }
 .container {
     padding-right: 20px;
     padding-left: 20px;
 }
-.footer {
+.header {
     display: flex;
 }
 .site-logo {
